--- a/backend/templates/partials/_menuitems.html
+++ b/backend/templates/partials/_menuitems.html
@@ -2,6 +2,7 @@
 <li class="nav-item" ><a class="nav-link" href="/about-project/">{% trans 'O projekcie' %}</a></li>
 {% comment %} <li><a href="#services">Fantasy</a></li>
 <li><a href="#portfolio">Rozgrywki</a></li> {% endcomment %}
+<li class="nav-item" ><a class="nav-link" href="/blog/">{% trans 'Blog' %}</a></li>
 <li class="nav-item dropdown">
     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="">{% trans 'Bazy' %}</a>
     <div class="dropdown-menu">
