fixes for display in profile

--- a/profiles/templates/profiles/partials/_two_list.html
+++ b/profiles/templates/profiles/partials/_two_list.html
@@ -1,5 +1,5 @@
 <li class="list-group-item text-left border-0">
-<span class="pull-left text-muted"><strong>Poziom rozgrywkowy:</strong></span> {{ show_user.profile.league_raw }}
+<span class="pull-left text-muted"><strong>Poziom rozgrywkowy:</strong></span> {{ show_user.profile.display_league }}
 </li>
 {% if show_user.group %}
 <li class="list-group-item text-left border-0">
