--- a/app/templates/platform/navigation/_nav_club.html
+++ b/app/templates/platform/navigation/_nav_club.html
@@ -5,6 +5,7 @@
 
 {% if user.is_authenticated %}
     <li class="nav-item"><a class="nav-link" href="{% url 'marketplace:announcements'%}">{% trans 'Testy piłkarskie' %}</a></li>
+    <li class="nav-item"><a class="nav-link" href="{% url 'products:products'%}?tag=dlaKlubu">{% trans 'Produkty PlayMaker' %}</a></li>
     <li class="nav-item"><a class="nav-link" href="{% url 'profiles:my_requests'%}">{% trans 'Zapytania' %}{% include 'platform/navigation/_nav_badge_requests.html' %} </a></li>
     {% include 'platform/navigation/_nav.html'%}            
     <li class="nav-item">{% get_my_club_link css_class='nav-link'%}</li>
