--- a/app/templates/platform/navigation/_nav_player.html
+++ b/app/templates/platform/navigation/_nav_player.html
@@ -4,6 +4,7 @@
 {% if user.is_authenticated %}
     <li class="nav-item"><a class="nav-link" href="/transfer/">Transfer</a></li>
     <li class="nav-item"><a class="nav-link" href="{% url 'marketplace:announcements'%}">{% trans 'Testy piłkarskie' %}</a></li>
+    <li class="nav-item"><a class="nav-link" href="{% url 'products:products'%}?tag=dlaPiłkarza">{% trans 'Produkty PlayMaker' %}</a></li>
     <li class="nav-item"><a class="nav-link" href="{% url 'profiles:my_requests'%}">{% trans 'Zapytania' %}{% include 'platform/navigation/_nav_badge_requests.html' %}</a></li>
     {% include 'platform/navigation/_nav.html'%}
     {% comment %} <li class="nav-item"><a class="nav-link" href="{% url 'profiles:my_carrier'%}">{% trans 'Kariera' %}</a></li>
