--- a/users/templates/account/roles_modal.html
+++ b/users/templates/account/roles_modal.html
@@ -13,15 +13,24 @@
 
       <div class="modal-body">
       <div>
-       Dostępne role na <strong>{% include 'platform/partials/brandname.html' %}</strong>
-        <ul>
-            <li>Piłkarz</li>
-            <li>Trener</li>
-            <li>Klub / Szkółka piłkarska</li>
-            <li>Agent piłkarski</li>
-            <li>Skout</li>
-            <li>Rodzic małego piłkarza</li>
-            <li>Kibic </li>
+      
+          <br>
+            <h5><strong>Piłkarz</strong></h5>
+            <p>
+            <small>Dla zawodników oraz zawodniczek zarejestrowanych w ramach rozgrywek PZPN, a także dla osób zaczynających przygodę z piłką nożną. Dodaj video. 
+            Zweryfikuj się wpisując poprawne dane. 
+            My znajdziemy Twoje statystyki. Twoje piłkarskie CV będzie gotowe, a wtedy wszystko w Twoich nogach. </small>
+            
+            </p>
+            
+            <h5><strong>Trener</strong></h5>
+            <p><small>Dla licencjonowanych trenerów oraz dla trenerów w trakcie kursu. Obserwuj, szukaj piłkarzy, ogłaszaj testy i wzmacniaj swoją kadrę.</small></p>
+            
+            <h5><strong>Klub / Szkółka piłkarska</strong></h5>
+            <h5><strong>Agent piłkarski</strong></h5>
+            <h5><strong>Skaut</strong></h5>
+            <h5><strong>Rodzic małego piłkarza</strong></h5>
+            <h5><strong>Kibic</strong></h5>
         </ul>
       </div>
 
