--- a/products/templates/products/_card.html
+++ b/products/templates/products/_card.html
@@ -36,7 +36,7 @@
 
         <div class="card-text text-center d-inline-flex justify-content-center align-content-center flex-wrap">
            
-            <a class="btn-pm" href="/products/{{ object.id }}"> Sprawdz ofertę </a>
+            <a class="btn-pm" href="{% url 'products:detail' slug=object.slug %}"> Sprawdz ofertę </a>
 
         </div>
     </div>
