--- a/fantasy/templates/fantasy/_table.html
+++ b/fantasy/templates/fantasy/_table.html
@@ -1,28 +1,18 @@
 {% load i18n %}
 
   <table class="table">
-
     <thead>
         <tr>
-            <!-- sm --> <th scope="col" class="d-md-none">{% trans 'Pozycja' %}</th>
-            <th scope="col" class="d-none d-md-table-cell">{% trans 'Pozycja' %}</th>
-            <th scope="col" class="d-none d-md-table-cell">{% trans 'Klub' %}</th>
-            <th scope="col" class="d-none d-md-table-cell">{% trans 'Rozgrywki' %}</th>
-            <th scope="col" class="">
-                <i class="table-icon icofont-jersey-alt"></i>{% include 'platform/buttons/helper.html' with helper_position="top" tooltip_title=_("Pierwszy skład / Rozegrane mecze ") tooltip_position="top" %}
-            </th>
-            
-            <th scope="col" class="">
-                {% if show_user.profile.is_goalkeeper %}
-                    <i class="table-icon  icofont-goal text-danger"></i>{% include 'platform/buttons/helper.html' with helper_position="top" tooltip_title=_("Utracone bramki w rozgrywkach.") tooltip_position="top" %}
-                {% else %}
+            <!-- sm --> <th scope="col" class="d-md-none">{% trans 'Ranking' %}</th>
+            <!-- sm --> <th scope="col" class="d-md-none">{% trans 'Dane gracza' %}</th>
+            <th scope="col" class="d-none d-md-table-cell"><i class="icofont-trophy"></i>{% trans 'Miejsce' %}</th>
+            <th scope="col" class="d-none d-md-table-cell">{% trans 'Punkty' %}</th>
+            <th scope="col" class="d-none d-md-table-cell">{% trans 'Mecze' %}</th>
+            <th scope="col" class="d-none d-md-table-cell">{% trans 'Piłkarz' %}</th>
+            <th scope="col" class="d-none d-md-table-cell">{% trans 'Drużyna' %}</th>
+            <th scope="col" class="d-none d-md-table-cell">{% trans 'Poziom rozgrywkowy' %}</th>
+            <th scope="col" class="d-none d-md-table-cell">{% trans 'Wojewódźtwo' %}</th>
 
-                <i class="table-icon icofont-soccer"></i>{% include 'platform/buttons/helper.html' with helper_position="top" tooltip_title=_("Strzelone gole") tooltip_position="top" %} 
-                {% endif %}
-            </th>
-            <th scope="col"><i class="table-icon  icofont-clock-time"></i></th>    
-            <th scope="col"><i class="table-icon  icofont-penalty-card text-warning"></i></th>
-            <th scope="col"><i class="table-icon  icofont-penalty-card text-danger"></i></th>
         </tr>
     </thead>
     <tbody>
@@ -31,25 +21,37 @@
         <tr style="font-size:0.9em;">
            <!-- sm --> 
            <td class="d-md-none">
-                <strong>{{ season.name }}</strong> <br>
+                <strong>{{ object.place }}</strong> <br>
                 <small class="text-muted">
-                    {{ season.team|upper  }} <br>
-                    {{ season.league|upper }}<Br>
+                    {{ object.score  }} <span class="text-muted">pkt<span>
                 </small>
             </td>
-
+            <td class="d-md-none">
+                <a href="{{ object.profile.get_permalink }}">
+                    <strong> {{ object.player.get_full_name|upper }} {{ object.player.profile.age|default:'' }} 
+                        {% if object.player.profile.age %}{% trans 'l.' %} {% endif %} 
+                    </strong>
+                </a> <br>
+                <small class="text-muted">
+                {{ object.player.profile.display_team|default:''|upper}}
+                {{ object.player.profile.display_league|default:'' }}
+                {{ object.player.profile.display_voivodeship|default:''|lower }}
+                </small>
+            </td>
+            <td class="d-none d-md-table-cell">{{ object.place}}</td>
             <td class="d-none d-md-table-cell">{{ object.score }}</td>
-            <td class="d-none d-md-table-cell">{{ object.player|upper }}</td>
-            <td class="d-none d-md-table-cell"> {{ season.league|title }}</td>
-            <td class="">{{ season.first_squad_games_played }} / {{ season.games_played }}</td>
-            {% if show_user.profile.is_goalkeeper %}
-                <td>{{ season.lost_goals }} </td>
-            {% else %}
-                <td>{{ season.team_goals }}</td>
-            {% endif %}
-            <td class="">{{ season.minutes_played }}'</td>
-            <td>{{ season.yellow_cards }}</td>
-            <td>{{ season.red_cards }}</td>
+            <td class="d-none d-md-table-cell">{{ object.games_count }}</td>
+            <td class="d-none d-md-table-cell">
+                 <a href="{{ object.profile.get_permalink }}">
+                    <strong> {{ object.player.get_full_name|upper }} {{ object.player.profile.age|default:'' }} 
+                        {% if object.player.profile.age %}{% trans 'l.' %} {% endif %} 
+                    </strong>
+                </a>
+
+            </td>
+            <td class="d-none d-md-table-cell">{{ object.player.profile.display_team|default:''|upper}}</td>
+            <td class="d-none d-md-table-cell">{{ object.player.profile.display_league|default:'' }}</td>
+            <td class="d-none d-md-table-cell">{{ object.player.profile.display_voivodeship|default:''|lower }}</td>
 
         </tr>
     {% endfor %}
