--- a/fantasy/templates/fantasy/base.html
+++ b/fantasy/templates/fantasy/base.html
@@ -5,6 +5,13 @@
 {% block title %}{{ block.super }} {{ page_title }} {% endblock %}
 
 
+{% block extra_css %}
+    {{ block.super }}
+    <link href="{% static 'assets/css/filters.css' %}" rel="stylesheet">
+    <link href="{% static 'assets/css/fantasy.css' %}" rel="stylesheet">
+{% endblock extra_css %}
+
+
 {% block content_header %}
     {% include '_page_heading.html' with heading_title=page_title size=4 %}
     {{ block.super }}
@@ -12,7 +19,6 @@
 
 
 {% block content %}
-
 <style>
 #products{ 
     background-color:#F8F8F8;
@@ -156,15 +162,11 @@
 }
 </style>
 
-{% include 'fantasy/filters.html' %}
-
+{% include 'fantasy/filters_desktop.html' %}
 
 <section id="fantasy" class="fantasy">
   <div class="container" data-aos="fade-up"> 
-   <div classw="row">
-   </div>
     <div class="row" >
-
         {% if page_obj.paginator.count == 0 %}
             <div class="col-md-12 text-center">
                 {% include 'profiles/partials/_empty_data.html' %}
@@ -177,16 +179,14 @@
                 {% include 'platform/partials/_pagination.html' %}
             </div>       
         {% endif %}
-    </div> <!-- 'row' -->
+    </div>
 </div>
 </section>
-
 {% endblock %}
 
 {% block extra_js %}
     {{ block.super }}
-
+    {% include 'platform/filters/filters_scripts.html' %}
     <script src="{% static 'assets/js/filters.js' %}"></script>
-    {% include 'products/_filter_modal.html' %}
-
+    {% include 'fantasy/filters_mobile_modal.html' %}
 {% endblock %}
