--- a/fantasy/templates/fantasy/filters_mobile_modal.html
+++ b/fantasy/templates/fantasy/filters_mobile_modal.html
@@ -16,9 +16,29 @@
         <form id="filter-form-mobile" method="get" class="form-inline ">
           <div class="modal-body row no-gutters">
 
-              {% block modal_body %}
-                      
-              {% endblock modal_body %}
+              <div class="col-12 col-md-1 filter p-2">
+                {% include 'platform/filters/filter_select__season.html' with  size=120 options=filters.season %}
+              </div>
+
+              <div class="col-12 col-md-1 filter p-2">
+                {% include 'platform/filters/filter_radio__is_senior.html' %}
+              </div>
+
+              <div class="col-12 col-md-1 filter p-2">
+                {% include 'soccerbase/tables/filters/filter_firstlastname_input.html' %}
+              </div>
+
+              <div class="col-12 col-md-1 filter p-2">
+               {% include 'soccerbase/tables/filters/filter_input_team_name.html' with size=120  %}
+              </div>
+
+              <div class="col-12 col-md-1 filter p-2"> 
+                  {% include 'soccerbase/tables/filters/filter_league_ms.html' %}
+              </div>
+
+              <div class="col-12 col-md-1 filter p-2"> 
+                  {% include 'soccerbase/tables/filters/filter_vivo_ms.html' %}
+              </div>
 
           </div>
           <div class="modal-footer">
