--- a/soccerbase/templates/soccerbase/tables/base_desktop_filters.html
+++ b/soccerbase/templates/soccerbase/tables/base_desktop_filters.html
@@ -1,40 +1,21 @@
-
-
-
-
 {% load i18n %}
 {% load thumbnail %}
 {% load playmaker %}
 
-
-  <div id="table-filters" style="background-color:#2b2b2b;" class="d-none d-md-inline table-filters">
-    <div class="container-fluid">
-      
-            <form id="filter-form" method="get" class="form-inline row ">
-           
-                {% block desktop_filters_body %}
-                {% endblock desktop_filters_body %}
-              <div class="col-2 col-md-1 filter-button"> 
-                
-                  {% filter_button user %}
-                
-                  
-              </div>
-
-            </form>
-                         
-     </div>
+<div id="table-filters" class="d-none d-md-inline table-filters">
+  <div class="container-fluid">
+    <form id="filter-form" method="get" class="form-inline row">
+        {% block desktop_filters_body %} {# filters body #} {% endblock desktop_filters_body %}
+      <div class="col-2 col-md-1 filter-button"> 
+          {% filter_button user %}
+      </div>
+    </form>            
+  </div>
 </div>
 
-
-
-<div style="background-color:#2b2b2b;"id="table-filterss" class="p-4 d-md-none fixed-bottom">
+<div id="mobile-filters" class="p-4 d-md-none fixed-bottom">
     <div class="container-fluid text-center">
-     
-        <button id="open-filter-button"  type="button" class="btn-pm" data-toggle="modal" data-target="#filterModal">
-        {% trans 'Filtruj wyniki' %}
-        </button>
-
+        <button id="open-filter-button"  type="button" class="btn-pm" data-toggle="modal" data-target="#filterModal">{% trans 'Filtruj wyniki' %}</button>
      </div>
 </div>
 
