--- a/products/templates/products/_form.html
+++ b/products/templates/products/_form.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 <form id="user-request-form" action="/products/send/{{ requet_id }}/" method="post" class="form-inline row">
- 
+    {% csrf_token %}
     {{ page_obj.html_form|safe }}
     <div class="row">
         <button id="request-button" class="btn-pm" type="submit" value="{% trans 'Wyślij zapytanie' %}">{% trans 'Wyślij zapytanie' %}</button>
