--- a/products/templates/products/detail.html
+++ b/products/templates/products/detail.html
@@ -23,19 +23,11 @@
                 <h4 class="mb-3 text-center">{{ page_obj.subtitle|default:'' }}</h4>
             </div>
             <div class="row d-flex justify-content-center">
-
+                {{ page_obj.html_first|safe|default:'' }}
+                {{ page_obj.html_form|safe|default:'' }}
                 {{ page_obj.html_body|safe|default:'' }}
                 
-            </div>
-
-             {% csrf_token %}
-
-            {% if page_obj.html_form %}
-             <div class="row d-flex justify-content-center">
-                {% include 'products/_form.html' with requet_id=page_obj.id %}
-             </div>
-             {% endif %}
-             
+            </div>             
              <div class="row d-flex justify-content-center">
                  {{ page_obj.html_body_footer|safe|default:'' }}
              </div>
