faqs,fantasy, products

--- a/fantasy/templates/fantasy/filters_desktop.html
+++ b/fantasy/templates/fantasy/filters_desktop.html
@@ -25,7 +25,7 @@
         </div>
         
         <div class="col-4 col-md-1 filter"> 
-            {% include 'soccerbase/tables/filters/filter_league_ms.html' with size=120 %}
+            {% include 'fantasy/filter_leagues.html' with size=120 %}
         </div>
 
         <div class="col-4 col-md-1 filter ml-1"> 
