--- a/fantasy/templates/fantasy/_table.html
+++ b/fantasy/templates/fantasy/_table.html
@@ -4,11 +4,12 @@
     <thead>
         <tr>
             <!-- sm --> <th scope="col" class="d-md-none">{% trans 'Ranking' %}</th>
-            <!-- sm --> <th scope="col" class="d-md-none">{% trans 'Dane gracza' %}</th>
+            <!-- sm --> <th scope="col" class="d-md-none">{% trans 'Dane piłkarza' %}</th>
             <th scope="col" class="d-none d-md-table-cell"><i class="icofont-trophy"></i>{% trans 'Miejsce' %}</th>
             <th scope="col" class="d-none d-md-table-cell">{% trans 'Punkty' %}</th>
             <th scope="col" class="d-none d-md-table-cell">{% trans 'Mecze' %}</th>
             <th scope="col" class="d-none d-md-table-cell">{% trans 'Piłkarz' %}</th>
+            <th scope="col" class="d-none d-md-table-cell">{% trans 'Pozycja' %}</th>
             <th scope="col" class="d-none d-md-table-cell">{% trans 'Drużyna' %}</th>
             <th scope="col" class="d-none d-md-table-cell">{% trans 'Poziom rozgrywkowy' %}</th>
             <th scope="col" class="d-none d-md-table-cell">{% trans 'Wojewódźtwo' %}</th>
@@ -27,28 +28,31 @@
                 </small>
             </td>
             <td class="d-md-none">
-                <a href="{{ object.profile.get_permalink }}">
+                <a href="{% url 'profiles:player_fantasy' slug=object.player.profile.slug %}">
                     <strong> {{ object.player.get_full_name|upper }} {{ object.player.profile.age|default:'' }} 
                         {% if object.player.profile.age %}{% trans 'l.' %} {% endif %} 
                     </strong>
                 </a> <br>
                 <small class="text-muted">
+                {{ object.player.profile.position_fantasy|default:''|upper}}
                 {{ object.player.profile.display_team|default:''|upper}}
                 {{ object.player.profile.display_league|default:'' }}
                 {{ object.player.profile.display_voivodeship|default:''|lower }}
+                {{ object.player.profile.fantasy_postion|default:'' }}
                 </small>
             </td>
-            <td class="d-none d-md-table-cell">{{ object.place}}</td>
+            <td class="d-none d-md-table-cell">{{ object.place }}</td>
             <td class="d-none d-md-table-cell">{{ object.score }}</td>
-            <td class="d-none d-md-table-cell">{{ object.games_count }}</td>
+            <td class="d-none d-md-table-cell">{{ object.games_played|default:0 }}</td>
             <td class="d-none d-md-table-cell">
-                 <a href="{{ object.profile.get_permalink }}">
+                 <a href="{% url 'profiles:player_fantasy' slug=object.player.profile.slug %}">
                     <strong> {{ object.player.get_full_name|upper }} {{ object.player.profile.age|default:'' }} 
                         {% if object.player.profile.age %}{% trans 'l.' %} {% endif %} 
                     </strong>
                 </a>
 
             </td>
+            <td class="d-none d-md-table-cell">{{ object.player.profile.position_fantasy|default:''|upper}}</td>
             <td class="d-none d-md-table-cell">{{ object.player.profile.display_team|default:''|upper}}</td>
             <td class="d-none d-md-table-cell">{{ object.player.profile.display_league|default:'' }}</td>
             <td class="d-none d-md-table-cell">{{ object.player.profile.display_voivodeship|default:''|lower }}</td>
