--- a/fantasy/templates/fantasy/filters_mobile_modal.html
+++ b/fantasy/templates/fantasy/filters_mobile_modal.html
@@ -33,7 +33,7 @@
               </div>
 
               <div class="col-12 col-md-1 filter p-2"> 
-                  {% include 'soccerbase/tables/filters/filter_league_ms.html' %}
+                  {% include 'fantasy/filter_leagues.html' with size=120 %}
               </div>
 
               <div class="col-12 col-md-1 filter p-2"> 
