--- a/fqa/templates/fqa/faqs.html
+++ b/fqa/templates/fqa/faqs.html
@@ -9,12 +9,10 @@
         </div>
 
         <ul class="faq-list accordion aos-init aos-animate" data-aos="fade-up">
-        
-         
          {% for object in objects %}
           <li>
-            <a data-bs-toggle="collapse" class="collapsed" data-bs-target="#faq1">{{ object.question_html }} <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-x icon-close"></i></a>
-            <div id="faq1" class="collapse" data-bs-parent=".faq-list">
+            <a data-toggle="collapse" class="collapsed" data-target="#faq1">{{ object.question_html }} <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-x icon-close"></i></a>
+            <div id="faq1" class="collapse" data-parent=".faq-list">
               <p>
                 {{ object.answer_html }}
               </p>
