--- a/backend/templates/partials/_toast.html
+++ b/backend/templates/partials/_toast.html
@@ -1,13 +1,8 @@
-  
-  
-  
-  
-  
 {% with message=message %}
-  <div class="toast" role="alert" data-delay="13000" aria-live="assertive" aria-atomic="true">
+  <div class="toast {{ message.tags }}" role="alert" data-delay="13000" aria-live="assertive" aria-atomic="true">
     <div class="toast-header">
       <img src="..." class="rounded mr-2" alt="...">
-      <strong class="mr-auto">{{ message.tags }}</strong>
+      <strong class="mr-auto"></strong>
       <small class="text-muted">just now</small>
       <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
         <span aria-hidden="true">&times;</span>
